--- a/index.html
+++ b/index.html
@@ -38,9 +38,24 @@ body, html {
 .w3-greyscale-min, .w3-grayscale-min {
     filter: grayscale(0%);
 }
+.w3-jumbo{
+line-height: 1 !important;
+}
 @media (min-width: 601px){
 .w3-col.m3, .w3-quarter {
     width: 32.99999%;
+}
+}
+@media (max-width: 800px){
+.about-cta{
+  padding: 10px !important;
+}
+.w3-xxlarge{
+line-height: 1.3 !important;
+}
+.w3-display-left{
+  padding: 0 !important;
+  width: 90vw !important;
 }
 }
 </style>
@@ -81,19 +96,19 @@ body, html {
   <div class="w3-display-left w3-text-white" style="padding:48px;text-align: center;right: 0%;background-color: rgba(0,0,0,0.65);
     width: 80vw;
     margin: 0 auto;">
-    <span class="w3-jumbo w3-hide-small">Order anything and Pay on Delivery</span><br>
-    <span class="w3-xxlarge w3-hide-large w3-hide-medium">Exclusively for Macomb and surroundings</span><br>
-    <span class="w3-large">Exclusively for Macomb and surroundings</span>
-    <p><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more and start today</a></p>
+    <span class="w3-jumbo w3-hide-small">Order your needs and pay-on-delivery</span><br>
+    <span class="w3-xxlarge w3-hide-large w3-hide-medium">Order your needs and pay-on-delivery</span><br>
+    <span class="w3-large">We Deliver for FREE</span>
+    <p><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off about-cta">Learn more and start today</a></p>
   </div> 
-  <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
+<!--   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
     <i class="fa fa-snapchat w3-hover-opacity"></i>
     <i class="fa fa-pinterest-p w3-hover-opacity"></i>
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
-  </div>
+  </div> -->
 </header>
 
 <!-- About Section -->
